gitops/apps/xafrun/deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xafrun-backend
  namespace: xafrun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xafrun-backend
  template:
    metadata:
      labels:
        app: xafrun-backend
    spec:
      serviceAccountName: xafrun-backend
      containers:
      - name: backend
        image: registry.talos-tart-ha.talos-on-macos.com/xafrun-backend:sha-73c11b144280379c510eea091c60be4ce3222adc
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xafrun-backend
  namespace: xafrun
spec:
  selector:
    app: xafrun-backend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xafrun-frontend
  namespace: xafrun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xafrun-frontend
  template:
    metadata:
      labels:
        app: xafrun-frontend
    spec:
      containers:
      - name: frontend
        image: registry.talos-tart-ha.talos-on-macos.com/xafrun-frontend:sha-73c11b144280379c510eea091c60be4ce3222adc
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: xafrun-frontend
  namespace: xafrun
spec:
  selector:
    app: xafrun-frontend
  ports:
  - port: 80
    targetPort: 3000
