gitops/apps/xafrun/deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xafrun
  namespace: xafrun
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "xafrun.talos-tart-ha.talos-on-macos.com"
  rules:
    - backendRefs:
        - name: xafrun-frontend
          port: 80
